--- a/WooApp/HomeNavigationBar.xib
+++ b/WooApp/HomeNavigationBar.xib
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeNavigationBar" customModule="WooApp" customModuleProvider="target">
             <connections>
                 <outlet property="customBurgerMenuView" destination="qCq-oZ-HZq" id="goK-eq-cIt"/>
+                <outlet property="lblTitle" destination="LpD-HF-TM6" id="06p-mv-2oL"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,21 +24,21 @@
                     <rect key="frame" x="0.0" y="20" width="375" height="60"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xp4-vC-pN9">
-                            <rect key="frame" x="279" y="0.0" width="88" height="60"/>
+                            <rect key="frame" x="295" y="0.0" width="72" height="60"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="88" id="423-tx-Ke5"/>
+                                <constraint firstAttribute="width" constant="72" id="423-tx-Ke5"/>
                                 <constraint firstAttribute="height" constant="60" id="S2b-Vv-Shc"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="as2-K3-twb">
-                            <rect key="frame" x="8" y="0.0" width="86" height="60"/>
+                            <rect key="frame" x="8" y="0.0" width="49" height="60"/>
                             <subviews>
                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qCq-oZ-HZq" customClass="CustomBurgerMenuAnimationView" customModule="WooApp" customModuleProvider="target">
-                                    <rect key="frame" x="8" y="8" width="50" height="45"/>
+                                    <rect key="frame" x="1" y="8" width="50" height="45"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DeT-Yf-3wQ">
-                                    <rect key="frame" x="8" y="8" width="50" height="44"/>
+                                    <rect key="frame" x="1" y="8" width="50" height="44"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <connections>
                                         <action selector="btnSideMenuTapped:" destination="-1" eventType="touchUpInside" id="wPR-2m-Mfw"/>
@@ -45,18 +46,38 @@
                                 </button>
                             </subviews>
                             <constraints>
-                                <constraint firstAttribute="width" constant="86" id="81y-J1-GK3"/>
+                                <constraint firstAttribute="width" constant="49" id="81y-J1-GK3"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l9E-Jn-Lfe">
+                            <rect key="frame" x="82" y="8" width="211" height="44"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="csdvxcvsdfsadfsdf" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="LpD-HF-TM6">
+                                    <rect key="frame" x="2" y="10.5" width="207" height="24"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="LpD-HF-TM6" secondAttribute="trailing" constant="2" id="HyI-da-rPk"/>
+                                <constraint firstItem="LpD-HF-TM6" firstAttribute="centerY" secondItem="l9E-Jn-Lfe" secondAttribute="centerY" id="K3M-Qr-uY0"/>
+                                <constraint firstItem="LpD-HF-TM6" firstAttribute="leading" secondItem="l9E-Jn-Lfe" secondAttribute="leading" constant="2" id="Zaw-OM-iSf"/>
                             </constraints>
                         </view>
                     </subviews>
                     <color key="backgroundColor" red="0.12041999253863268" green="0.56165918554748551" blue="0.80879813558393776" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
+                        <constraint firstItem="xp4-vC-pN9" firstAttribute="leading" secondItem="l9E-Jn-Lfe" secondAttribute="trailing" constant="2" id="0zt-kg-1ko"/>
                         <constraint firstAttribute="bottom" secondItem="xp4-vC-pN9" secondAttribute="bottom" id="54o-ki-Pkl"/>
                         <constraint firstAttribute="trailing" secondItem="xp4-vC-pN9" secondAttribute="trailing" constant="8" id="7a2-E1-Uvd"/>
+                        <constraint firstItem="l9E-Jn-Lfe" firstAttribute="leading" secondItem="as2-K3-twb" secondAttribute="trailing" constant="25" id="Rl0-wN-9hm"/>
                         <constraint firstAttribute="bottom" secondItem="as2-K3-twb" secondAttribute="bottom" id="dTQ-Ba-tnE"/>
                         <constraint firstItem="as2-K3-twb" firstAttribute="leading" secondItem="sV9-9G-vrA" secondAttribute="leading" constant="8" id="h3V-Ov-VTW"/>
                         <constraint firstItem="xp4-vC-pN9" firstAttribute="top" secondItem="sV9-9G-vrA" secondAttribute="top" id="kPF-dl-Xa4"/>
                         <constraint firstItem="as2-K3-twb" firstAttribute="top" secondItem="sV9-9G-vrA" secondAttribute="top" id="n4t-iV-IFJ"/>
+                        <constraint firstItem="l9E-Jn-Lfe" firstAttribute="top" secondItem="sV9-9G-vrA" secondAttribute="top" constant="8" id="rGU-bB-zqa"/>
+                        <constraint firstAttribute="bottom" secondItem="l9E-Jn-Lfe" secondAttribute="bottom" constant="8" id="tGZ-es-RLe"/>
                     </constraints>
                 </view>
             </subviews>
