--- a/WooApp/SideMenuTableCell.xib
+++ b/WooApp/SideMenuTableCell.xib
@@ -41,6 +41,10 @@
                 </constraints>
             </tableViewCellContentView>
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+            <connections>
+                <outlet property="imgIcon" destination="USM-H2-bdy" id="WJo-VM-7LW"/>
+                <outlet property="lblTitle" destination="hI2-0o-RWf" id="pgs-1e-syw"/>
+            </connections>
             <point key="canvasLocation" x="-35" y="74.5"/>
         </tableViewCell>
     </objects>
