--- a/WooApp/Base.lproj/Main.storyboard
+++ b/WooApp/Base.lproj/Main.storyboard
@@ -881,12 +881,12 @@ Cg
                             <constraint firstItem="dO8-tE-FtJ" firstAttribute="leading" secondItem="hra-rb-qpe" secondAttribute="leading" id="DTK-Wb-byK"/>
                             <constraint firstItem="dO8-tE-FtJ" firstAttribute="height" secondItem="hra-rb-qpe" secondAttribute="height" id="EFq-P4-a96"/>
                             <constraint firstItem="rha-7E-1b7" firstAttribute="leading" secondItem="hra-rb-qpe" secondAttribute="leading" id="Gcv-hI-Ou3"/>
-                            <constraint firstItem="vu8-3g-Dzg" firstAttribute="top" secondItem="rha-7E-1b7" secondAttribute="bottom" id="IGc-qU-ZUW"/>
                             <constraint firstItem="dO8-tE-FtJ" firstAttribute="width" secondItem="hra-rb-qpe" secondAttribute="width" id="RhB-6G-DUk"/>
-                            <constraint firstItem="dO8-tE-FtJ" firstAttribute="top" secondItem="Dem-L4-ED0" secondAttribute="bottom" constant="-20" id="V0v-6L-sTb"/>
+                            <constraint firstItem="rha-7E-1b7" firstAttribute="top" secondItem="Dem-L4-ED0" secondAttribute="bottom" constant="-20" id="Rvc-4C-334"/>
                             <constraint firstItem="Kdy-gF-VY5" firstAttribute="width" secondItem="hra-rb-qpe" secondAttribute="width" id="XQ4-9l-pND"/>
-                            <constraint firstItem="rha-7E-1b7" firstAttribute="top" secondItem="Dem-L4-ED0" secondAttribute="bottom" constant="-20" id="rUo-Bm-ms3"/>
+                            <constraint firstItem="vu8-3g-Dzg" firstAttribute="top" secondItem="rha-7E-1b7" secondAttribute="bottom" id="by4-Co-XYt"/>
                             <constraint firstAttribute="trailing" secondItem="rha-7E-1b7" secondAttribute="trailing" id="sY8-sX-JYV"/>
+                            <constraint firstItem="dO8-tE-FtJ" firstAttribute="top" secondItem="Dem-L4-ED0" secondAttribute="bottom" constant="-20" id="vKF-XH-CED"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
